correct spacing for mobile view
Also, indention correction

--- a/css/main.css
+++ b/css/main.css
@@ -1,85 +1,95 @@
  /*================     ISSUES     ================ */
-/*CHANGE ALL PX NOTATION TO EM OR PERCENT*/
-
-header {
-    background-image:url(../img/header-img.jpeg); /*downladed the image for faster loading time*/
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height:400px;
-
-    padding: 50px;
-}
-header {
-    
-}
-header h1 {
-    margin-top: 60pt;
-    line-height: 80pt;    
-    font-weight: 800;
-    text-shadow: 20%;
-}
-header h2{
-    margin-top: 50px;
-}
-h1, h2{
-    font-family: 'Playfair Display', serif;
-}
-body{
-    font-family: 'Raleway', serif;
-    line-height:200%;
-    width: 100%;
-    height: 100%;
-}
-#about p{
-  padding: .4em;
-}
-section{ /*spacing between sections*/
-    min-height: 350px;
-    padding-top: 60px;
-}
-
-section h2{
-    margin: 1em;
-}
-
-body {  /* spacing to accomidate for nav bar*/
- /*padding-top: 60px; */
-}
-
-.navbar-brand { /*correct spacing for icon*/
-    padding:3px 12px;
-}
-
-.thumbnail {
-    border: 0 none;
-    box-shadow: none;
-}
-
-#contact-img{
-    height:250px;
-}
-
-hr { 
-  height: 30px; 
-  border-style: solid; 
-  border-color: #8c8b8b; 
-  border-width: 1px 0 0 0; 
-  border-radius: 20px; 
-} 
-hr:before { 
-  display: block; 
-  content: ""; 
-  height: 30px; 
-  margin-top: -31px; 
-  border-style: solid; 
-  border-color: #8c8b8b; 
-  border-width: 0 0 1px 0; 
-  border-radius: 20px; 
-}
-
-
-section ul li{ /***** CHECK UNDERSTANDING OF horizontal navigation*/
-    display: inline-block;
-    padding:0 20px;
-}
+ /*CHANGE ALL PX NOTATION TO EM OR PERCENT*/
+ 
+ header {
+     background-image: url(../img/header-img.jpeg);
+     /*downladed the image for faster loading time*/
+     background-position: center;
+     background-size: cover;
+     background-repeat: no-repeat;
+     min-height: 400px;
+     padding: 50px;
+ }
+ 
+ header {}
+ 
+ header h1 {
+     margin-top: 60pt;
+     line-height: 80pt;
+     font-weight: 800;
+     text-shadow: 20%;
+ }
+ 
+ header h2 {
+     margin-top: 50px;
+ }
+ 
+ h1,
+ h2 {
+     font-family: 'Playfair Display', serif;
+ }
+ 
+ body {
+     font-family: 'Raleway', serif;
+     line-height: 200%;
+     width: 100%;
+     height: 100%;
+ }
+ 
+ #about p {
+     padding: .4em;
+ }
+ 
+ section {
+     /*spacing between sections*/
+     min-height: 350px;
+     padding-top: 60px;
+ }
+ 
+ section h2 {
+     margin: 1em;
+ }
+ 
+ body {
+     /* spacing to accomidate for nav bar*/
+     /*padding-top: 60px; */
+ }
+ 
+ .navbar-brand {
+     /*correct spacing for icon*/
+     padding: 3px 12px;
+ }
+ 
+ .thumbnail {
+     border: 0 none;
+     box-shadow: none;
+ }
+ 
+ #contact-img {
+     max-height: 250px;
+ }
+ 
+ hr {
+     height: 30px;
+     border-style: solid;
+     border-color: #8c8b8b;
+     border-width: 1px 0 0 0;
+     border-radius: 20px;
+ }
+ 
+ hr:before {
+     display: block;
+     content: "";
+     height: 30px;
+     margin-top: -31px;
+     border-style: solid;
+     border-color: #8c8b8b;
+     border-width: 0 0 1px 0;
+     border-radius: 20px;
+ }
+ 
+ section ul li {
+     /***** CHECK UNDERSTANDING OF horizontal navigation*/
+     display: inline-block;
+     padding: 0 20px;
+ }
